--- a/bowl_pool/2022-2023/results.html
+++ b/bowl_pool/2022-2023/results.html
@@ -962,27 +962,49 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>B6</td>
+<td>Will an orange-colored team win the Orange Bowl?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>10.5</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>19.25</strong></td>
+<td><strong>11.5</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>20.25</strong></td>
 <td><strong>15.5</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>11.5</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>11.75</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>16.5</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>12.5</strong></td>
 <td><strong>16.0</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>18.25</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>17.5</strong></td>
 <td><strong>17.0</strong></td>
-<td><strong>11.5</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>12.5</strong></td>
 </tr>
 </tbody>
 </table>
