--- a/bowl_pool/test/2022-2023/results.html
+++ b/bowl_pool/test/2022-2023/results.html
@@ -720,27 +720,291 @@ ul.auto-toc {
 <td>1.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>15</td>
+<td>Liberty Bowl</td>
+<td>Arkansas</td>
+<td>Kansas</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>16</td>
+<td>Holiday Bowl</td>
+<td>Oregon</td>
+<td>North Carolina</td>
+<td>14.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+</tr>
+<tr><td>17</td>
+<td>Texas Bowl</td>
+<td>Ole Miss</td>
+<td>Texas Tech</td>
+<td>3.5</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>18</td>
+<td>Pinstripe Bowl</td>
+<td>Minnesota</td>
+<td>Syracuse</td>
+<td>7.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>19</td>
+<td>Cheez-It Bowl</td>
+<td>Florida State</td>
+<td>Oklahoma</td>
+<td>8.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+</tr>
+<tr><td>20</td>
+<td>Alamo Bowl</td>
+<td>Texas</td>
+<td>Washington</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+</tr>
+<tr><td>21</td>
+<td>Duke's Mayo Bowl</td>
+<td>Maryland</td>
+<td>NC State</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>22</td>
+<td>Sun Bowl</td>
+<td>UCLA</td>
+<td>Pitt</td>
+<td>3.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>23</td>
+<td>Gator Bowl</td>
+<td>Notre Dame</td>
+<td>South Carolina</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>24</td>
+<td>Arizona Bowl</td>
+<td>Ohio</td>
+<td>Wyoming</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>25</td>
+<td>Orange Bowl</td>
+<td>Clemson</td>
+<td>Tennessee</td>
+<td>6.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>B6</td>
+<td>Will an orange-colored team win the Orange Bowl?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>5.25</strong></td>
-<td><strong>7.25</strong></td>
-<td><strong>8.0</strong></td>
-<td><strong>8.5</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>6.5</strong></td>
-<td><strong>7.0</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>7.25</strong></td>
-<td><strong>7.5</strong></td>
-<td><strong>10.0</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>7.0</strong></td>
-<td><strong>8.0</strong></td>
-<td><strong>5.0</strong></td>
+<td><strong>11.5</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>12.5</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>18.25</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>12.5</strong></td>
 </tr>
 </tbody>
 </table>
