--- a/bowl_pool/2022-2023/rankings.html
+++ b/bowl_pool/2022-2023/rankings.html
@@ -364,26 +364,26 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2022-12-31 11:36:46</em></div>
-<div class="line"><em>Last bowl scored:  Orange Bowl (Clemson vs. Tennessee)</em></div>
+<div class="line"><em>Last updated:  2022-12-31 23:47:13</em></div>
+<div class="line"><em>Last bowl scored:  Peach Bowl (Georgia vs. Ohio State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Amanda 20.25</strong></div>
-<div class="line">2. <strong>Badgers 19.0</strong></div>
-<div class="line">3. <strong>Bugaroo 18.25</strong></div>
-<div class="line">4. GlamKam 18.0</div>
-<div class="line">4. Sure Thing Shipley 18.0</div>
-<div class="line">6. MamaLonghorn 17.5</div>
-<div class="line">7. NIL 17.0</div>
-<div class="line">8. blue orred 16.0</div>
-<div class="line">9. Bad News Bibby 15.5</div>
-<div class="line">9. bopper 15.5</div>
-<div class="line">11. Aggie Austin 13.25</div>
-<div class="line">11. D-bo 13.25</div>
-<div class="line">13. Gigi 12.75</div>
-<div class="line">14. Bear-in-Law 12.5</div>
-<div class="line">14. W2D2 12.5</div>
-<div class="line">16. <strong>#mamabear 11.5</strong></div>
+<div class="line">1. <strong>Amanda 27.25</strong></div>
+<div class="line">2. GlamKam 25.0</div>
+<div class="line">2. <strong>Sure Thing Shipley 25.0</strong></div>
+<div class="line">4. Badgers 24.0</div>
+<div class="line">5. <strong>Bugaroo 23.25</strong></div>
+<div class="line">6. blue orred 23.0</div>
+<div class="line">7. Bear-in-Law 22.5</div>
+<div class="line">7. bopper 22.5</div>
+<div class="line">9. NIL 22.0</div>
+<div class="line">10. Aggie Austin 21.25</div>
+<div class="line">11. MamaLonghorn 20.5</div>
+<div class="line">12. #mamabear 19.5</div>
+<div class="line">12. Bad News Bibby 19.5</div>
+<div class="line">14. W2D2 17.5</div>
+<div class="line">15. D-bo 17.25</div>
+<div class="line">16. <strong>Gigi 14.75</strong></div>
 </div>
 </div>
 </body>
