--- a/bowl_pool/2022-2023/results.html
+++ b/bowl_pool/2022-2023/results.html
@@ -962,6 +962,138 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>26</td>
+<td>Sugar Bowl</td>
+<td>Alabama</td>
+<td>Kansas State</td>
+<td>6.5</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+</tr>
+<tr><td>27</td>
+<td>Music City Bowl</td>
+<td>Iowa</td>
+<td>Kentucky</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>28</td>
+<td>Fiesta Bowl</td>
+<td>Michigan</td>
+<td>TCU</td>
+<td>7.5</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>29</td>
+<td>Peach Bowl</td>
+<td>Georgia</td>
+<td>Ohio State</td>
+<td>6.5</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0<sup>*</sup></td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+</tr>
+<tr><td>B3</td>
+<td>Will more than 62 total points be scored in the Peach Bowl?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>B4</td>
+<td>Will more than 58.5 total points be scored in the Fiesta Bowl?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B6</td>
 <td>Will an orange-colored team win the Orange Bowl?</td>
 <td>&nbsp;</td>
@@ -989,22 +1121,22 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>11.5</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>18.0</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>27.25</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>24.0</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>23.25</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>25.0</strong></td>
 <td><strong>17.5</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>12.5</strong></td>
 </tr>
 </tbody>
 </table>
