--- a/bowl_pool/2022-2023/rankings.html
+++ b/bowl_pool/2022-2023/rankings.html
@@ -364,15 +364,15 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2022-12-31 23:47:13</em></div>
+<div class="line"><em>Last updated:  2022-12-31 23:49:23</em></div>
 <div class="line"><em>Last bowl scored:  Peach Bowl (Georgia vs. Ohio State)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. <strong>Amanda 27.25</strong></div>
-<div class="line">2. GlamKam 25.0</div>
+<div class="line">2. <strong>GlamKam 25.0</strong></div>
 <div class="line">2. <strong>Sure Thing Shipley 25.0</strong></div>
 <div class="line">4. Badgers 24.0</div>
-<div class="line">5. <strong>Bugaroo 23.25</strong></div>
+<div class="line">5. Bugaroo 23.25</div>
 <div class="line">6. blue orred 23.0</div>
 <div class="line">7. Bear-in-Law 22.5</div>
 <div class="line">7. bopper 22.5</div>
