Semifinals update with highlights with bonus

--- a/bowl_pool/2022-2023/rankings.html
+++ b/bowl_pool/2022-2023/rankings.html
@@ -364,21 +364,21 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2022-12-31 23:49:23</em></div>
+<div class="line"><em>Last updated:  2023-01-01 00:14:16</em></div>
 <div class="line"><em>Last bowl scored:  Peach Bowl (Georgia vs. Ohio State)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. <strong>Amanda 27.25</strong></div>
-<div class="line">2. <strong>GlamKam 25.0</strong></div>
 <div class="line">2. <strong>Sure Thing Shipley 25.0</strong></div>
-<div class="line">4. Badgers 24.0</div>
-<div class="line">5. Bugaroo 23.25</div>
-<div class="line">6. blue orred 23.0</div>
-<div class="line">7. Bear-in-Law 22.5</div>
-<div class="line">7. bopper 22.5</div>
-<div class="line">9. NIL 22.0</div>
-<div class="line">10. Aggie Austin 21.25</div>
-<div class="line">11. MamaLonghorn 20.5</div>
+<div class="line">3. <strong>Badgers 24.0</strong></div>
+<div class="line">4. Bugaroo 23.25</div>
+<div class="line">5. GlamKam 23.0</div>
+<div class="line">6. NIL 22.0</div>
+<div class="line">7. Bear-in-Law 21.5</div>
+<div class="line">7. bopper 21.5</div>
+<div class="line">9. blue orred 21.0</div>
+<div class="line">10. MamaLonghorn 20.5</div>
+<div class="line">11. Aggie Austin 20.25</div>
 <div class="line">12. #mamabear 19.5</div>
 <div class="line">12. Bad News Bibby 19.5</div>
 <div class="line">14. W2D2 17.5</div>
