Rose Bowl update with highlights

--- a/bowl_pool/2022-2023/rankings.html
+++ b/bowl_pool/2022-2023/rankings.html
@@ -364,26 +364,26 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-01-01 00:14:16</em></div>
-<div class="line"><em>Last bowl scored:  Peach Bowl (Georgia vs. Ohio State)</em></div>
+<div class="line"><em>Last updated:  2023-01-02 23:03:40</em></div>
+<div class="line"><em>Last bowl scored:  Rose Bowl (Utah vs. Penn State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Amanda 27.25</strong></div>
-<div class="line">2. <strong>Sure Thing Shipley 25.0</strong></div>
-<div class="line">3. <strong>Badgers 24.0</strong></div>
-<div class="line">4. Bugaroo 23.25</div>
-<div class="line">5. GlamKam 23.0</div>
-<div class="line">6. NIL 22.0</div>
-<div class="line">7. Bear-in-Law 21.5</div>
-<div class="line">7. bopper 21.5</div>
-<div class="line">9. blue orred 21.0</div>
-<div class="line">10. MamaLonghorn 20.5</div>
-<div class="line">11. Aggie Austin 20.25</div>
-<div class="line">12. #mamabear 19.5</div>
-<div class="line">12. Bad News Bibby 19.5</div>
-<div class="line">14. W2D2 17.5</div>
-<div class="line">15. D-bo 17.25</div>
-<div class="line">16. <strong>Gigi 14.75</strong></div>
+<div class="line">1. <strong>Amanda 34.0</strong></div>
+<div class="line">2. <strong>GlamKam 32.25</strong></div>
+<div class="line">3. <strong>Badgers 29.75</strong></div>
+<div class="line">3. <strong>bopper 29.75</strong></div>
+<div class="line">5. Bugaroo 29.0</div>
+<div class="line">5. Sure Thing Shipley 29.0</div>
+<div class="line">7. #mamabear 27.25</div>
+<div class="line">8. MamaLonghorn 26.25</div>
+<div class="line">8. NIL 26.25</div>
+<div class="line">10. Bad News Bibby 25.75</div>
+<div class="line">10. Bear-in-Law 25.75</div>
+<div class="line">12. Aggie Austin 25.5</div>
+<div class="line">13. blue orred 24.25</div>
+<div class="line">14. D-bo 22.5</div>
+<div class="line">15. W2D2 21.75</div>
+<div class="line">16. <strong>Gigi 17.0</strong></div>
 </div>
 </div>
 </body>
