--- a/bowl_pool/2022-2023/results.html
+++ b/bowl_pool/2022-2023/results.html
@@ -1050,6 +1050,116 @@ ul.auto-toc {
 <td>2.0</td>
 <td>2.0</td>
 </tr>
+<tr><td>30</td>
+<td>Outback Bowl</td>
+<td>Illinois</td>
+<td>Mississippi State</td>
+<td>2.0</td>
+<td>2.25<sup>*</sup></td>
+<td>2.25<sup>*</sup></td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>2.25<sup>*</sup></td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>2.25<sup>*</sup></td>
+</tr>
+<tr><td>31</td>
+<td>Citrus Bowl</td>
+<td>LSU</td>
+<td>Purdue</td>
+<td>14.5</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+</tr>
+<tr><td>32</td>
+<td>Cotton Bowl</td>
+<td>USC</td>
+<td>Tulane</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>33</td>
+<td>Rose Bowl</td>
+<td>Utah</td>
+<td>Penn State</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>B2</td>
+<td>How many of these teams will cancel their bowl game?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B3</td>
 <td>Will more than 62 total points be scored in the Peach Bowl?</td>
 <td>&nbsp;</td>
@@ -1094,6 +1204,28 @@ ul.auto-toc {
 <td>1.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>B5</td>
+<td>Will Caleb Williams pass for more than 300 yards against Tulane?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B6</td>
 <td>Will an orange-colored team win the Orange Bowl?</td>
 <td>&nbsp;</td>
@@ -1121,22 +1253,22 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>19.5</strong></td>
-<td><strong>20.25</strong></td>
 <td><strong>27.25</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>24.0</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>23.25</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>23.0</strong></td>
-<td><strong>20.5</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>25.0</strong></td>
-<td><strong>17.5</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>34.0</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>24.25</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>29.0</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>32.25</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>29.0</strong></td>
+<td><strong>21.75</strong></td>
 </tr>
 </tbody>
 </table>
