--- a/bowl_pool/2022-2023/rankings.html
+++ b/bowl_pool/2022-2023/rankings.html
@@ -364,25 +364,25 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-01-02 23:03:40</em></div>
+<div class="line"><em>Last updated:  2023-01-09 21:22:19</em></div>
 <div class="line"><em>Last bowl scored:  Rose Bowl (Utah vs. Penn State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Amanda 34.0</strong></div>
+<div class="line">1. <strong>Amanda 35.0</strong></div>
 <div class="line">2. <strong>GlamKam 32.25</strong></div>
-<div class="line">3. <strong>Badgers 29.75</strong></div>
-<div class="line">3. <strong>bopper 29.75</strong></div>
-<div class="line">5. Bugaroo 29.0</div>
-<div class="line">5. Sure Thing Shipley 29.0</div>
-<div class="line">7. #mamabear 27.25</div>
-<div class="line">8. MamaLonghorn 26.25</div>
-<div class="line">8. NIL 26.25</div>
-<div class="line">10. Bad News Bibby 25.75</div>
-<div class="line">10. Bear-in-Law 25.75</div>
+<div class="line">3. <strong>Sure Thing Shipley 30.0</strong></div>
+<div class="line">4. Badgers 29.75</div>
+<div class="line">4. bopper 29.75</div>
+<div class="line">6. Bugaroo 29.0</div>
+<div class="line">7. #mamabear 28.25</div>
+<div class="line">8. MamaLonghorn 27.25</div>
+<div class="line">8. NIL 27.25</div>
+<div class="line">10. Bear-in-Law 26.75</div>
+<div class="line">11. Bad News Bibby 25.75</div>
 <div class="line">12. Aggie Austin 25.5</div>
-<div class="line">13. blue orred 24.25</div>
-<div class="line">14. D-bo 22.5</div>
-<div class="line">15. W2D2 21.75</div>
+<div class="line">13. blue orred 25.25</div>
+<div class="line">14. W2D2 22.75</div>
+<div class="line">15. D-bo 22.5</div>
 <div class="line">16. <strong>Gigi 17.0</strong></div>
 </div>
 </div>
