--- a/bowl_pool/2022-2023/results.html
+++ b/bowl_pool/2022-2023/results.html
@@ -1138,6 +1138,28 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>B1</td>
+<td>Who will win the National Championship?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
 <tr><td>B2</td>
 <td>How many of these teams will cancel their bowl game?</td>
 <td>&nbsp;</td>
@@ -1253,22 +1275,22 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>27.25</strong></td>
+<td><strong>28.25</strong></td>
 <td><strong>25.5</strong></td>
-<td><strong>34.0</strong></td>
+<td><strong>35.0</strong></td>
 <td><strong>25.75</strong></td>
 <td><strong>29.75</strong></td>
-<td><strong>25.75</strong></td>
-<td><strong>24.25</strong></td>
+<td><strong>26.75</strong></td>
+<td><strong>25.25</strong></td>
 <td><strong>29.75</strong></td>
 <td><strong>29.0</strong></td>
 <td><strong>22.5</strong></td>
 <td><strong>17.0</strong></td>
 <td><strong>32.25</strong></td>
-<td><strong>26.25</strong></td>
-<td><strong>26.25</strong></td>
-<td><strong>29.0</strong></td>
-<td><strong>21.75</strong></td>
+<td><strong>27.25</strong></td>
+<td><strong>27.25</strong></td>
+<td><strong>30.0</strong></td>
+<td><strong>22.75</strong></td>
 </tr>
 </tbody>
 </table>
