--- a/bowl_pool/test/2022-2023/results.html
+++ b/bowl_pool/test/2022-2023/results.html
@@ -962,6 +962,292 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>26</td>
+<td>Sugar Bowl</td>
+<td>Alabama</td>
+<td>Kansas State</td>
+<td>6.5</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+</tr>
+<tr><td>27</td>
+<td>Music City Bowl</td>
+<td>Iowa</td>
+<td>Kentucky</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>28</td>
+<td>Fiesta Bowl</td>
+<td>Michigan</td>
+<td>TCU</td>
+<td>7.5</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>29</td>
+<td>Peach Bowl</td>
+<td>Georgia</td>
+<td>Ohio State</td>
+<td>6.5</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0<sup>*</sup></td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+</tr>
+<tr><td>30</td>
+<td>Outback Bowl</td>
+<td>Illinois</td>
+<td>Mississippi State</td>
+<td>2.0</td>
+<td>2.25<sup>*</sup></td>
+<td>2.25<sup>*</sup></td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>2.25<sup>*</sup></td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>2.25<sup>*</sup></td>
+</tr>
+<tr><td>31</td>
+<td>Citrus Bowl</td>
+<td>LSU</td>
+<td>Purdue</td>
+<td>14.5</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+</tr>
+<tr><td>32</td>
+<td>Cotton Bowl</td>
+<td>USC</td>
+<td>Tulane</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>33</td>
+<td>Rose Bowl</td>
+<td>Utah</td>
+<td>Penn State</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>B1</td>
+<td>Who will win the National Championship?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>B2</td>
+<td>How many of these teams will cancel their bowl game?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>B3</td>
+<td>Will more than 62 total points be scored in the Peach Bowl?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>B4</td>
+<td>Will more than 58.5 total points be scored in the Fiesta Bowl?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>B5</td>
+<td>Will Caleb Williams pass for more than 300 yards against Tulane?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B6</td>
 <td>Will an orange-colored team win the Orange Bowl?</td>
 <td>&nbsp;</td>
@@ -989,22 +1275,22 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>11.5</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>17.5</strong></td>
+<td><strong>28.25</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>35.0</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>26.75</strong></td>
+<td><strong>25.25</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>29.0</strong></td>
+<td><strong>22.5</strong></td>
 <td><strong>17.0</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>12.5</strong></td>
+<td><strong>32.25</strong></td>
+<td><strong>27.25</strong></td>
+<td><strong>27.25</strong></td>
+<td><strong>30.0</strong></td>
+<td><strong>22.75</strong></td>
 </tr>
 </tbody>
 </table>
