Championship bonus round update

--- a/bowl_pool/test/2022-2023_Bonus/rankings.html
+++ b/bowl_pool/test/2022-2023_Bonus/rankings.html
@@ -364,20 +364,20 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-01-09 21:24:37</em></div>
+<div class="line"><em>Last updated:  2023-01-09 21:53:33</em></div>
 <div class="line"><em>Last bowl scored:  National Championship (Georgia vs. TCU)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. #mamabear 5.0</div>
-<div class="line">1. Sure Thing Shipley 5.0</div>
-<div class="line">3. Gigi 4.0</div>
-<div class="line">3. MamaLonghorn 4.0</div>
-<div class="line">5. Amanda 3.0</div>
-<div class="line">5. Badgers 3.0</div>
-<div class="line">5. Bear in Law 3.0</div>
-<div class="line">5. Bugaroo 3.0</div>
-<div class="line">5. NIL 3.0</div>
-<div class="line">10. Bad New Bibby 1.0</div>
+<div class="line">1. <strong>Sure Thing Shipley 7.0</strong></div>
+<div class="line">2. Gigi 6.0</div>
+<div class="line">2. MamaLonghorn 6.0</div>
+<div class="line">4. #mamabear 5.0</div>
+<div class="line">4. Badgers 5.0</div>
+<div class="line">4. Bugaroo 5.0</div>
+<div class="line">7. Amanda 4.0</div>
+<div class="line">7. Bear in Law 4.0</div>
+<div class="line">7. NIL 4.0</div>
+<div class="line">10. Bad New Bibby 0.0</div>
 </div>
 </div>
 </body>
