Initialize 2023-2024 bowl pool

--- a/bowl_pool/test/2022-2023_Bonus/rankings.html
+++ b/bowl_pool/test/2022-2023_Bonus/rankings.html
@@ -364,11 +364,11 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-01-09 21:53:33</em></div>
+<div class="line"><em>Last updated:  2023-12-16 16:31:12</em></div>
 <div class="line"><em>Last bowl scored:  National Championship (Georgia vs. TCU)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Sure Thing Shipley 7.0</strong></div>
+<div class="line">1. Sure Thing Shipley 7.0</div>
 <div class="line">2. Gigi 6.0</div>
 <div class="line">2. MamaLonghorn 6.0</div>
 <div class="line">4. #mamabear 5.0</div>
