Dec 17th update

--- a/bowl_pool/2023-2024/rankings.html
+++ b/bowl_pool/2023-2024/rankings.html
@@ -364,32 +364,32 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-12-16 17:27:57</em></div>
-<div class="line"><em>Last bowl scored:  New Orleans Bowl (Jacksonville State vs. Louisiana Lafayette)</em></div>
+<div class="line"><em>Last updated:  2023-12-17 10:39:39</em></div>
+<div class="line"><em>Last bowl scored:  Independence Bowl (Texas Tech vs. California)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Badgers Rock! 2.25</div>
-<div class="line">1. bugabugaroo 2.25</div>
-<div class="line">1. LadyLonghorn 2.25</div>
-<div class="line">1. Sir Fluffy McFlufferson 2.25</div>
-<div class="line">1. The New Guy 2.25</div>
-<div class="line">6. Bear-in-Law 2.0</div>
-<div class="line">7. #MamaBear 1.25</div>
-<div class="line">7. Barkside Ballers (Wylie &amp; Flapjack) 1.25</div>
-<div class="line">7. Dbo 1.25</div>
-<div class="line">7. GlamKam 1.25</div>
-<div class="line">7. Rando Cal Rece Ian 1.25</div>
-<div class="line">7. Sascha Picks Dogs 1.25</div>
-<div class="line">13. Big 12 Bibby 1.0</div>
-<div class="line">13. Dazed &amp; Confoosballed 1.0</div>
-<div class="line">13. MamaDAWG 1.0</div>
-<div class="line">13. SEC Shipley 1.0</div>
-<div class="line">17. Aggie Austin 0.0</div>
-<div class="line">17. COOKIES 0.0</div>
-<div class="line">17. em&amp;em 0.0</div>
-<div class="line">17. Kylo Bad Dog 0.0</div>
-<div class="line">17. Manda Panda 0.0</div>
-<div class="line">17. WD50 0.0</div>
+<div class="line">1. bugabugaroo 6.5</div>
+<div class="line">2. Barkside Ballers (Wylie &amp; Flapjack) 5.5</div>
+<div class="line">2. LadyLonghorn 5.5</div>
+<div class="line">4. SEC Shipley 5.25</div>
+<div class="line">5. Badgers Rock! 4.5</div>
+<div class="line">6. #MamaBear 4.25</div>
+<div class="line">6. GlamKam 4.25</div>
+<div class="line">6. MamaDAWG 4.25</div>
+<div class="line">6. Rando Cal Rece Ian 4.25</div>
+<div class="line">6. The New Guy 4.25</div>
+<div class="line">11. Aggie Austin 3.25</div>
+<div class="line">11. Kylo Bad Dog 3.25</div>
+<div class="line">11. Sir Fluffy McFlufferson 3.25</div>
+<div class="line">14. Bear-in-Law 3.0</div>
+<div class="line">14. Dazed &amp; Confoosballed 3.0</div>
+<div class="line">14. WD50 3.0</div>
+<div class="line">17. Dbo 2.5</div>
+<div class="line">17. Sascha Picks Dogs 2.5</div>
+<div class="line">19. Big 12 Bibby 2.0</div>
+<div class="line">19. COOKIES 2.0</div>
+<div class="line">19. em&amp;em 2.0</div>
+<div class="line">22. Manda Panda 1.0</div>
 </div>
 </div>
 </body>
