--- a/bowl_pool/2023-2024/results.html
+++ b/bowl_pool/2023-2024/results.html
@@ -480,33 +480,145 @@ ul.auto-toc {
 <td>1.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>3</td>
+<td>Cure Bowl</td>
+<td>Appalachian State</td>
+<td>Miami (OH)</td>
+<td>6.5</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>4</td>
+<td>New MexicoBowl</td>
+<td>New Mexico State</td>
+<td>Fresno State</td>
+<td>3.5</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>5</td>
+<td>LA Bowl</td>
+<td>UCLA</td>
+<td>Boise State</td>
+<td>4.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>6</td>
+<td>Independence Bowl</td>
+<td>Texas Tech</td>
+<td>California</td>
+<td>3.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>1.25</strong></td>
-<td><strong>0.0</strong></td>
-<td><strong>2.25</strong></td>
-<td><strong>1.25</strong></td>
+<td><strong>4.25</strong></td>
+<td><strong>3.25</strong></td>
+<td><strong>4.5</strong></td>
+<td><strong>5.5</strong></td>
+<td><strong>3.0</strong></td>
 <td><strong>2.0</strong></td>
+<td><strong>6.5</strong></td>
+<td><strong>2.0</strong></td>
+<td><strong>3.0</strong></td>
+<td><strong>2.5</strong></td>
+<td><strong>2.0</strong></td>
+<td><strong>4.25</strong></td>
+<td><strong>3.25</strong></td>
+<td><strong>5.5</strong></td>
+<td><strong>4.25</strong></td>
 <td><strong>1.0</strong></td>
-<td><strong>2.25</strong></td>
-<td><strong>0.0</strong></td>
-<td><strong>1.0</strong></td>
-<td><strong>1.25</strong></td>
-<td><strong>0.0</strong></td>
-<td><strong>1.25</strong></td>
-<td><strong>0.0</strong></td>
-<td><strong>2.25</strong></td>
-<td><strong>1.0</strong></td>
-<td><strong>0.0</strong></td>
-<td><strong>1.25</strong></td>
-<td><strong>1.25</strong></td>
-<td><strong>1.0</strong></td>
-<td><strong>2.25</strong></td>
-<td><strong>2.25</strong></td>
-<td><strong>0.0</strong></td>
+<td><strong>4.25</strong></td>
+<td><strong>2.5</strong></td>
+<td><strong>5.25</strong></td>
+<td><strong>3.25</strong></td>
+<td><strong>4.25</strong></td>
+<td><strong>3.0</strong></td>
 </tr>
 </tbody>
 </table>
