--- a/bowl_pool/2023-2024/rankings.html
+++ b/bowl_pool/2023-2024/rankings.html
@@ -364,32 +364,32 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-12-17 10:39:39</em></div>
-<div class="line"><em>Last bowl scored:  Independence Bowl (Texas Tech vs. California)</em></div>
+<div class="line"><em>Last updated:  2023-12-19 07:19:21</em></div>
+<div class="line"><em>Last bowl scored:  Famous Toastery Bowl (Old Dominion vs. Western Kentucky)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. bugabugaroo 6.5</div>
-<div class="line">2. Barkside Ballers (Wylie &amp; Flapjack) 5.5</div>
-<div class="line">2. LadyLonghorn 5.5</div>
-<div class="line">4. SEC Shipley 5.25</div>
-<div class="line">5. Badgers Rock! 4.5</div>
-<div class="line">6. #MamaBear 4.25</div>
-<div class="line">6. GlamKam 4.25</div>
-<div class="line">6. MamaDAWG 4.25</div>
-<div class="line">6. Rando Cal Rece Ian 4.25</div>
-<div class="line">6. The New Guy 4.25</div>
-<div class="line">11. Aggie Austin 3.25</div>
-<div class="line">11. Kylo Bad Dog 3.25</div>
-<div class="line">11. Sir Fluffy McFlufferson 3.25</div>
-<div class="line">14. Bear-in-Law 3.0</div>
-<div class="line">14. Dazed &amp; Confoosballed 3.0</div>
-<div class="line">14. WD50 3.0</div>
-<div class="line">17. Dbo 2.5</div>
-<div class="line">17. Sascha Picks Dogs 2.5</div>
-<div class="line">19. Big 12 Bibby 2.0</div>
-<div class="line">19. COOKIES 2.0</div>
-<div class="line">19. em&amp;em 2.0</div>
-<div class="line">22. Manda Panda 1.0</div>
+<div class="line">1. bugabugaroo 7.75</div>
+<div class="line">2. Barkside Ballers (Wylie &amp; Flapjack) 6.75</div>
+<div class="line">2. LadyLonghorn 6.75</div>
+<div class="line">4. GlamKam 5.5</div>
+<div class="line">4. Rando Cal Rece Ian 5.5</div>
+<div class="line">4. The New Guy 5.5</div>
+<div class="line">7. SEC Shipley 5.25</div>
+<div class="line">8. Badgers Rock! 4.5</div>
+<div class="line">8. Sir Fluffy McFlufferson 4.5</div>
+<div class="line">10. #MamaBear 4.25</div>
+<div class="line">10. Bear-in-Law 4.25</div>
+<div class="line">10. MamaDAWG 4.25</div>
+<div class="line">13. Dbo 3.75</div>
+<div class="line">13. Sascha Picks Dogs 3.75</div>
+<div class="line">15. Aggie Austin 3.25</div>
+<div class="line">15. Big 12 Bibby 3.25</div>
+<div class="line">15. COOKIES 3.25</div>
+<div class="line">15. em&amp;em 3.25</div>
+<div class="line">15. Kylo Bad Dog 3.25</div>
+<div class="line">20. Dazed &amp; Confoosballed 3.0</div>
+<div class="line">20. WD50 3.0</div>
+<div class="line">22. Manda Panda 2.25</div>
 </div>
 </div>
 </body>
