--- a/bowl_pool/2023-2024/results.html
+++ b/bowl_pool/2023-2024/results.html
@@ -592,6 +592,34 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>7</td>
+<td>Famous Toastery Bowl</td>
+<td>Old Dominion</td>
+<td>Western Kentucky</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
@@ -600,24 +628,24 @@ ul.auto-toc {
 <td><strong>4.25</strong></td>
 <td><strong>3.25</strong></td>
 <td><strong>4.5</strong></td>
-<td><strong>5.5</strong></td>
-<td><strong>3.0</strong></td>
-<td><strong>2.0</strong></td>
-<td><strong>6.5</strong></td>
-<td><strong>2.0</strong></td>
-<td><strong>3.0</strong></td>
-<td><strong>2.5</strong></td>
-<td><strong>2.0</strong></td>
+<td><strong>6.75</strong></td>
 <td><strong>4.25</strong></td>
 <td><strong>3.25</strong></td>
+<td><strong>7.75</strong></td>
+<td><strong>3.25</strong></td>
+<td><strong>3.0</strong></td>
+<td><strong>3.75</strong></td>
+<td><strong>3.25</strong></td>
 <td><strong>5.5</strong></td>
+<td><strong>3.25</strong></td>
+<td><strong>6.75</strong></td>
 <td><strong>4.25</strong></td>
-<td><strong>1.0</strong></td>
-<td><strong>4.25</strong></td>
-<td><strong>2.5</strong></td>
+<td><strong>2.25</strong></td>
+<td><strong>5.5</strong></td>
+<td><strong>3.75</strong></td>
 <td><strong>5.25</strong></td>
-<td><strong>3.25</strong></td>
-<td><strong>4.25</strong></td>
+<td><strong>4.5</strong></td>
+<td><strong>5.5</strong></td>
 <td><strong>3.0</strong></td>
 </tr>
 </tbody>
