--- a/bowl_pool/2023-2024/rankings.html
+++ b/bowl_pool/2023-2024/rankings.html
@@ -364,32 +364,32 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-12-19 07:19:21</em></div>
-<div class="line"><em>Last bowl scored:  Famous Toastery Bowl (Old Dominion vs. Western Kentucky)</em></div>
+<div class="line"><em>Last updated:  2023-12-20 09:24:47</em></div>
+<div class="line"><em>Last bowl scored:  Frisco Bowl (UTSA vs. Marshall)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. bugabugaroo 7.75</div>
-<div class="line">2. Barkside Ballers (Wylie &amp; Flapjack) 6.75</div>
-<div class="line">2. LadyLonghorn 6.75</div>
-<div class="line">4. GlamKam 5.5</div>
-<div class="line">4. Rando Cal Rece Ian 5.5</div>
-<div class="line">4. The New Guy 5.5</div>
-<div class="line">7. SEC Shipley 5.25</div>
-<div class="line">8. Badgers Rock! 4.5</div>
-<div class="line">8. Sir Fluffy McFlufferson 4.5</div>
-<div class="line">10. #MamaBear 4.25</div>
-<div class="line">10. Bear-in-Law 4.25</div>
-<div class="line">10. MamaDAWG 4.25</div>
-<div class="line">13. Dbo 3.75</div>
-<div class="line">13. Sascha Picks Dogs 3.75</div>
-<div class="line">15. Aggie Austin 3.25</div>
-<div class="line">15. Big 12 Bibby 3.25</div>
-<div class="line">15. COOKIES 3.25</div>
-<div class="line">15. em&amp;em 3.25</div>
-<div class="line">15. Kylo Bad Dog 3.25</div>
-<div class="line">20. Dazed &amp; Confoosballed 3.0</div>
-<div class="line">20. WD50 3.0</div>
-<div class="line">22. Manda Panda 2.25</div>
+<div class="line">1. bugabugaroo 8.75</div>
+<div class="line">2. LadyLonghorn 7.75</div>
+<div class="line">3. Barkside Ballers (Wylie &amp; Flapjack) 6.75</div>
+<div class="line">4. GlamKam 6.5</div>
+<div class="line">4. Rando Cal Rece Ian 6.5</div>
+<div class="line">4. The New Guy 6.5</div>
+<div class="line">7. SEC Shipley 6.25</div>
+<div class="line">8. Badgers Rock! 5.5</div>
+<div class="line">8. Sir Fluffy McFlufferson 5.5</div>
+<div class="line">10. #MamaBear 5.25</div>
+<div class="line">10. Bear-in-Law 5.25</div>
+<div class="line">10. MamaDAWG 5.25</div>
+<div class="line">13. Aggie Austin 4.25</div>
+<div class="line">13. Big 12 Bibby 4.25</div>
+<div class="line">13. COOKIES 4.25</div>
+<div class="line">13. em&amp;em 4.25</div>
+<div class="line">17. Dazed &amp; Confoosballed 4.0</div>
+<div class="line">17. WD50 4.0</div>
+<div class="line">19. Dbo 3.75</div>
+<div class="line">19. Sascha Picks Dogs 3.75</div>
+<div class="line">21. Kylo Bad Dog 3.25</div>
+<div class="line">21. Manda Panda 3.25</div>
 </div>
 </div>
 </body>
