--- a/bowl_pool/2023-2024/results.html
+++ b/bowl_pool/2023-2024/results.html
@@ -620,33 +620,61 @@ ul.auto-toc {
 <td>1.25</td>
 <td>0.0</td>
 </tr>
+<tr><td>8</td>
+<td>Frisco Bowl</td>
+<td>UTSA</td>
+<td>Marshall</td>
+<td>9.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
+<td><strong>5.25</strong></td>
 <td><strong>4.25</strong></td>
-<td><strong>3.25</strong></td>
-<td><strong>4.5</strong></td>
+<td><strong>5.5</strong></td>
 <td><strong>6.75</strong></td>
+<td><strong>5.25</strong></td>
 <td><strong>4.25</strong></td>
+<td><strong>8.75</strong></td>
+<td><strong>4.25</strong></td>
+<td><strong>4.0</strong></td>
+<td><strong>3.75</strong></td>
+<td><strong>4.25</strong></td>
+<td><strong>6.5</strong></td>
 <td><strong>3.25</strong></td>
 <td><strong>7.75</strong></td>
-<td><strong>3.25</strong></td>
-<td><strong>3.0</strong></td>
-<td><strong>3.75</strong></td>
-<td><strong>3.25</strong></td>
-<td><strong>5.5</strong></td>
-<td><strong>3.25</strong></td>
-<td><strong>6.75</strong></td>
-<td><strong>4.25</strong></td>
-<td><strong>2.25</strong></td>
-<td><strong>5.5</strong></td>
-<td><strong>3.75</strong></td>
 <td><strong>5.25</strong></td>
-<td><strong>4.5</strong></td>
+<td><strong>3.25</strong></td>
+<td><strong>6.5</strong></td>
+<td><strong>3.75</strong></td>
+<td><strong>6.25</strong></td>
 <td><strong>5.5</strong></td>
-<td><strong>3.0</strong></td>
+<td><strong>6.5</strong></td>
+<td><strong>4.0</strong></td>
 </tr>
 </tbody>
 </table>
