--- a/bowl_pool/2023-2024/results.html
+++ b/bowl_pool/2023-2024/results.html
@@ -648,32 +648,60 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>9</td>
+<td>Boca Raton Bowl</td>
+<td>Syracuse</td>
+<td>South Florida</td>
+<td>4.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>5.25</strong></td>
+<td><strong>6.75</strong></td>
 <td><strong>4.25</strong></td>
 <td><strong>5.5</strong></td>
-<td><strong>6.75</strong></td>
+<td><strong>8.25</strong></td>
 <td><strong>5.25</strong></td>
 <td><strong>4.25</strong></td>
 <td><strong>8.75</strong></td>
-<td><strong>4.25</strong></td>
+<td><strong>5.75</strong></td>
 <td><strong>4.0</strong></td>
-<td><strong>3.75</strong></td>
+<td><strong>5.25</strong></td>
 <td><strong>4.25</strong></td>
 <td><strong>6.5</strong></td>
 <td><strong>3.25</strong></td>
-<td><strong>7.75</strong></td>
+<td><strong>9.25</strong></td>
+<td><strong>6.75</strong></td>
+<td><strong>4.75</strong></td>
+<td><strong>8.0</strong></td>
 <td><strong>5.25</strong></td>
-<td><strong>3.25</strong></td>
-<td><strong>6.5</strong></td>
-<td><strong>3.75</strong></td>
-<td><strong>6.25</strong></td>
-<td><strong>5.5</strong></td>
-<td><strong>6.5</strong></td>
+<td><strong>7.75</strong></td>
+<td><strong>7.0</strong></td>
+<td><strong>8.0</strong></td>
 <td><strong>4.0</strong></td>
 </tr>
 </tbody>
