--- a/bowl_pool/2023-2024/rankings.html
+++ b/bowl_pool/2023-2024/rankings.html
@@ -364,32 +364,32 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-12-22 11:45:15</em></div>
-<div class="line"><em>Last bowl scored:  Boca Raton Bowl (Syracuse vs. South Florida)</em></div>
+<div class="line"><em>Last updated:  2023-12-23 14:34:11</em></div>
+<div class="line"><em>Last bowl scored:  Birmingham Bowl (Troy vs. Duke)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. LadyLonghorn 9.25</div>
-<div class="line">2. bugabugaroo 8.75</div>
-<div class="line">3. Barkside Ballers (Wylie &amp; Flapjack) 8.25</div>
-<div class="line">4. Rando Cal Rece Ian 8.0</div>
-<div class="line">4. The New Guy 8.0</div>
-<div class="line">6. SEC Shipley 7.75</div>
-<div class="line">7. Sir Fluffy McFlufferson 7.0</div>
-<div class="line">8. #MamaBear 6.75</div>
-<div class="line">8. MamaDAWG 6.75</div>
-<div class="line">10. GlamKam 6.5</div>
-<div class="line">11. COOKIES 5.75</div>
-<div class="line">12. Badgers Rock! 5.5</div>
-<div class="line">13. Bear-in-Law 5.25</div>
-<div class="line">13. Dbo 5.25</div>
-<div class="line">13. Sascha Picks Dogs 5.25</div>
-<div class="line">16. Manda Panda 4.75</div>
-<div class="line">17. Aggie Austin 4.25</div>
-<div class="line">17. Big 12 Bibby 4.25</div>
-<div class="line">17. em&amp;em 4.25</div>
-<div class="line">20. Dazed &amp; Confoosballed 4.0</div>
-<div class="line">20. WD50 4.0</div>
-<div class="line">22. Kylo Bad Dog 3.25</div>
+<div class="line">1. Barkside Ballers (Wylie &amp; Flapjack) 12.25</div>
+<div class="line">2. The New Guy 12.0</div>
+<div class="line">3. SEC Shipley 11.75</div>
+<div class="line">4. bugabugaroo 9.75</div>
+<div class="line">5. Rando Cal Rece Ian 9.5</div>
+<div class="line">6. Dbo 9.25</div>
+<div class="line">6. LadyLonghorn 9.25</div>
+<div class="line">6. Sascha Picks Dogs 9.25</div>
+<div class="line">9. GlamKam 8.0</div>
+<div class="line">9. Sir Fluffy McFlufferson 8.0</div>
+<div class="line">11. Bear-in-Law 7.75</div>
+<div class="line">11. MamaDAWG 7.75</div>
+<div class="line">13. Aggie Austin 7.25</div>
+<div class="line">14. #MamaBear 6.75</div>
+<div class="line">15. Kylo Bad Dog 6.25</div>
+<div class="line">16. COOKIES 5.75</div>
+<div class="line">16. em&amp;em 5.75</div>
+<div class="line">18. Badgers Rock! 5.5</div>
+<div class="line">19. Big 12 Bibby 5.25</div>
+<div class="line">20. WD50 5.0</div>
+<div class="line">21. Manda Panda 4.75</div>
+<div class="line">22. Dazed &amp; Confoosballed 4.0</div>
 </div>
 </div>
 </body>
