--- a/bowl_pool/2023-2024/results.html
+++ b/bowl_pool/2023-2024/results.html
@@ -676,33 +676,117 @@ ul.auto-toc {
 <td>1.5</td>
 <td>0.0</td>
 </tr>
+<tr><td>10</td>
+<td>Gasparilla Bowl</td>
+<td>UCF</td>
+<td>Georgia Tech</td>
+<td>4.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+</tr>
+<tr><td>11</td>
+<td>Camellia Bowl</td>
+<td>Arkansas State</td>
+<td>Northern Illinois</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>12</td>
+<td>Birmingham Bowl</td>
+<td>Troy</td>
+<td>Duke</td>
+<td>7.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>2.5<sup>*</sup></td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td><strong>6.75</strong></td>
-<td><strong>4.25</strong></td>
+<td><strong>7.25</strong></td>
 <td><strong>5.5</strong></td>
-<td><strong>8.25</strong></td>
+<td><strong>12.25</strong></td>
+<td><strong>7.75</strong></td>
 <td><strong>5.25</strong></td>
-<td><strong>4.25</strong></td>
-<td><strong>8.75</strong></td>
+<td><strong>9.75</strong></td>
 <td><strong>5.75</strong></td>
 <td><strong>4.0</strong></td>
-<td><strong>5.25</strong></td>
-<td><strong>4.25</strong></td>
-<td><strong>6.5</strong></td>
-<td><strong>3.25</strong></td>
 <td><strong>9.25</strong></td>
-<td><strong>6.75</strong></td>
-<td><strong>4.75</strong></td>
+<td><strong>5.75</strong></td>
 <td><strong>8.0</strong></td>
-<td><strong>5.25</strong></td>
+<td><strong>6.25</strong></td>
+<td><strong>9.25</strong></td>
 <td><strong>7.75</strong></td>
-<td><strong>7.0</strong></td>
+<td><strong>4.75</strong></td>
+<td><strong>9.5</strong></td>
+<td><strong>9.25</strong></td>
+<td><strong>11.75</strong></td>
 <td><strong>8.0</strong></td>
-<td><strong>4.0</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>5.0</strong></td>
 </tr>
 </tbody>
 </table>
