--- a/bowl_pool/2023-2024/results.html
+++ b/bowl_pool/2023-2024/results.html
@@ -760,33 +760,173 @@ ul.auto-toc {
 <td>2.5<sup>*</sup></td>
 <td>0.0</td>
 </tr>
+<tr><td>13</td>
+<td>Armed Forces Bowl</td>
+<td>James Madison</td>
+<td>Air Force</td>
+<td>2.5</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>14</td>
+<td>IdahoPotato Bowl</td>
+<td>Georgia State</td>
+<td>Utah State</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>15</td>
+<td>68 Ventures Bowl</td>
+<td>South Alabama</td>
+<td>Eastern Michigan</td>
+<td>15.5</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>16</td>
+<td>Las Vegas Bowl</td>
+<td>Utah</td>
+<td>Northwestern</td>
+<td>7.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>17</td>
+<td>HawaiiBowl</td>
+<td>San Jose State</td>
+<td>Coastal Carolina</td>
+<td>9.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>6.75</strong></td>
-<td><strong>7.25</strong></td>
-<td><strong>5.5</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>7.75</strong></td>
-<td><strong>5.25</strong></td>
-<td><strong>9.75</strong></td>
-<td><strong>5.75</strong></td>
-<td><strong>4.0</strong></td>
+<td><strong>10.0</strong></td>
 <td><strong>9.25</strong></td>
-<td><strong>5.75</strong></td>
-<td><strong>8.0</strong></td>
+<td><strong>8.5</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>8.75</strong></td>
 <td><strong>6.25</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>7.75</strong></td>
-<td><strong>4.75</strong></td>
-<td><strong>9.5</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>11.75</strong></td>
+<td><strong>14.0</strong></td>
 <td><strong>8.0</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>5.0</strong></td>
+<td><strong>6.0</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>6.75</strong></td>
+<td><strong>9.0</strong></td>
+<td><strong>12.5</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>11.0</strong></td>
+<td><strong>7.75</strong></td>
+<td><strong>10.5</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>9.0</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>7.0</strong></td>
 </tr>
 </tbody>
 </table>
