--- a/bowl_pool/2023-2024/rankings.html
+++ b/bowl_pool/2023-2024/rankings.html
@@ -364,32 +364,32 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2023-12-23 14:34:11</em></div>
-<div class="line"><em>Last bowl scored:  Birmingham Bowl (Troy vs. Duke)</em></div>
+<div class="line"><em>Last updated:  2023-12-24 10:50:46</em></div>
+<div class="line"><em>Last bowl scored:  HawaiiBowl (San Jose State vs. Coastal Carolina)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Barkside Ballers (Wylie &amp; Flapjack) 12.25</div>
-<div class="line">2. The New Guy 12.0</div>
-<div class="line">3. SEC Shipley 11.75</div>
-<div class="line">4. bugabugaroo 9.75</div>
-<div class="line">5. Rando Cal Rece Ian 9.5</div>
-<div class="line">6. Dbo 9.25</div>
-<div class="line">6. LadyLonghorn 9.25</div>
-<div class="line">6. Sascha Picks Dogs 9.25</div>
-<div class="line">9. GlamKam 8.0</div>
-<div class="line">9. Sir Fluffy McFlufferson 8.0</div>
-<div class="line">11. Bear-in-Law 7.75</div>
-<div class="line">11. MamaDAWG 7.75</div>
-<div class="line">13. Aggie Austin 7.25</div>
-<div class="line">14. #MamaBear 6.75</div>
-<div class="line">15. Kylo Bad Dog 6.25</div>
-<div class="line">16. COOKIES 5.75</div>
-<div class="line">16. em&amp;em 5.75</div>
-<div class="line">18. Badgers Rock! 5.5</div>
-<div class="line">19. Big 12 Bibby 5.25</div>
-<div class="line">20. WD50 5.0</div>
-<div class="line">21. Manda Panda 4.75</div>
-<div class="line">22. Dazed &amp; Confoosballed 4.0</div>
+<div class="line">1. Barkside Ballers (Wylie &amp; Flapjack) 17.5</div>
+<div class="line">2. SEC Shipley 14.75</div>
+<div class="line">3. Dbo 14.5</div>
+<div class="line">3. Sascha Picks Dogs 14.5</div>
+<div class="line">5. LadyLonghorn 14.25</div>
+<div class="line">6. bugabugaroo 14.0</div>
+<div class="line">7. The New Guy 13.0</div>
+<div class="line">8. Kylo Bad Dog 12.5</div>
+<div class="line">9. MamaDAWG 11.0</div>
+<div class="line">10. Rando Cal Rece Ian 10.5</div>
+<div class="line">11. #MamaBear 10.0</div>
+<div class="line">12. Aggie Austin 9.25</div>
+<div class="line">13. GlamKam 9.0</div>
+<div class="line">13. Sir Fluffy McFlufferson 9.0</div>
+<div class="line">15. Bear-in-Law 8.75</div>
+<div class="line">16. Badgers Rock! 8.5</div>
+<div class="line">17. COOKIES 8.0</div>
+<div class="line">18. Manda Panda 7.75</div>
+<div class="line">19. WD50 7.0</div>
+<div class="line">20. em&amp;em 6.75</div>
+<div class="line">21. Big 12 Bibby 6.25</div>
+<div class="line">22. Dazed &amp; Confoosballed 6.0</div>
 </div>
 </div>
 </body>
